tests/codegen/invalid/assembly_errors/test_undefined_function.src
// Тест: вызов несуществующей функции
fn main() -> int {
    return unknown_function(5);
}